--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "async": "^1.5.0",
     "connect-mongo": "^1.3.2",
+    "connect-mongostore": "^0.1.4",
     "dotenv": "^2.0.0",
     "keystone": "^0.3.19",
     "lodash": "^4.13.1"
