--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "connect-mongo": "^1.3.2",
     "connect-mongostore": "^0.1.4",
     "dotenv": "^2.0.0",
+    "faker": "^4.1.0",
     "keystone": "^0.3.19",
     "lodash": "^4.13.1"
   },
