--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "eslint-plugin-react": "^5.1.1",
     "gulp": "^3.7.0",
     "gulp-shell": "^0.5.0",
-    "gulp-watch": "^4.3.5"
+    "gulp-watch": "^4.3.5",
+    "nodemon": "^1.11.0"
   },
   "scripts": {
     "test": "eslint .",
     "lint": "eslint .",
+    "watch": "nodemon",
     "start": "node keystone.js"
   }
 }
