--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dotenv": "^2.0.0",
     "faker": "^4.1.0",
     "keystone": "^0.3.19",
-    "lodash": "^4.13.1"
+    "lodash": "^4.13.1",
+    "moment": "^2.17.1"
   },
   "devDependencies": {
     "eslint": "^2.12.0",
